Add important declaration to display block style in calendar styles

--- a/css/main.css
+++ b/css/main.css
@@ -882,7 +882,7 @@ a.periodbutton_on:link,
 }
 
 #calendar_athletics {
-    display: block;
+    display: block !important;
     height: 160px;
     padding: 1em;
     margin-bottom: 1.2em; /* 12px */
